--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ INFO, 10:10:10.10, "render_time", { who="cheetah", took=34 }
             <pre class="fragment"><code data-trim class="language-python">
             level, time, event, fields = json.loads(msg)
             </code></pre>
-            <p><span class="fragment">that's it</span> <span class="fragment">you're done</span></p>
+            <p><span class="fragment">that's it</span> <span class="fragment">, you're done</span></p>
             <p class="fragment">that works for every single structured log message</p>
             <p class="fragment">what you do with it is left as an exercise to the reader</p>
         </section>
