put logstash+kibana on one line

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ dt { text-align: left; }
             <h2>Software for logs</h2>
             <p>
             <span class="fragment"><a href="http://logstash.net"><img src="images/logstash-logo.png" height=100 /> logstash</a></span>
-            <span class="fragment">+</span></p>
+            <span class="fragment">+</span>
             <span class="fragment"><a href="https://www.elastic.co/products/kibana"><img src="images/kibana-logo.png"/></a>
             <span class="fragment">=</span>
             </p>
