fixed a formatting issue

--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@ dt { text-align: left; }
         </dl>
         <dl class="fragment">
             <dt>quick example</dt>
-            <dd>
-            <pre style="font-size:small">DEBUG 2015-03-14 06:00:01,700 pgrabber.imgparser:52: get_url_contents: http://dilbert.com/</pre>
-            </dd>
+        <pre>DEBUG 2015-03-14 06:00:01,700 pgrabber.imgparser:52: get_url_contents: http://dilbert.com/</pre>
         </dl>
     </section>
 
