adding link to github repo

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -89,7 +89,8 @@ pre > code {
         <h3>A journey through time</h3>
         <small>by <a href="mailto:kneufeld@burgundywall.com">Kurt Neufeld</a></small><br/>
         <small><a href="http://www.burgundywall.com">www.burgundywall.com</a></small><br/>
-        <small><a href="https://twitter.com/kneufeld">@kneufeld</a></small>
+        <small><a href="https://twitter.com/kneufeld">@kneufeld</a></small><br/>
+        <small><a href="https://github.com/py-yyc/pylogging">github.com/py-yyc/pylogging</a></small><br/>
     </section>
 
     <section>
